# SearchBackend_Titan

./: CMakeLists.txt  EchoServer.cpp  README.md
response-aggregator/: CMakeLists.txt
response-aggregator/include/: AggregatorHandler.h  AggregatorStats.h
response-aggregator/src/: AggregatorHandler.cpp  AggregatorServer.cpp
server-engine/: CMakeLists.txt
server-engine/include/: SearchHandler.h  SearchStats.h
server-engine/src/: SearchHandler.cpp  SearchServer.cpp
